# redforecast

./: .gitignore  README.md  package-lock.json  pyproject.toml
Jupyter/: Forecast.ipynb
docs/: misc.txt
mcpserver/: main.py
mcpserver/config/: const.py
mcpserver/datawrangler/: pandas_functions.py
mcpserver/mcptools/: mcptools.py
mcpserver/utils/: misc.py
misc/: misc.txt
src/: main.py
src/Jupyter/: Forecast.ipynb
src/config/: config.py  const.py
src/datawrangler/: pandas_functions.py
src/mcptools/: mcptools.py
src/utils/: misc.py
utils/: update_history.py
